[package]
name = "rbls12381"
version = "0.1.0"
authors = ["levi <levifeldman37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
hex = "0.4.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'



